--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,33 @@
 ---
 layout: base
 ---
-
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{page.title}}</h1>
   {%- endif -%}
-  <section>
-    {{ content }}
-  </section>
+
+  {%- if site.posts.size > 0 -%}
+    <h2>新着</h2>
+    <ul>
+      {% for post in site.posts limit: 5 %}
+        <li>
+          <a href="{{post.url}}">{{post.title}}</a>
+          (<i>{{post.date | date: "%Y/%m/%d"}}</i>)
+        </li>
+      {% endfor %}
+    </ul>
+    {% for keyvalue in site.categories %}
+      {% assign c = keyvalue[0] %}
+      <h2>{{c}}</h2>
+      {% assign cat-posts = site.posts | where: "category", c %}
+      <ul>
+      {%- for post in cat-posts limit: 5 -%}
+        <li>
+          <a href="{{post.url}}">{{post.title}}</a>
+          (<i>{{post.date | date: "%Y/%m/%d"}}</i>)
+        </li>
+      {%- endfor -%}
+      </ul>
+    {% endfor %}
+  {%- endif -%}
 </div>
