--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,15 @@
 ---
 layout: base
 ---
-{% if page.category %}
-<div class="">
-  <span> {{ page.category }} </span>
+{% if page.title %}
+<h1>{{ page.title }}</h1>
+{% endif %}
+
+{% if page.categories %}
+<div class="categories">
+  {% for c in page.categories %}
+    <span><a href="/{{c}}/">{{ c }}</a></span>
+  {% endfor %}
 </div>
 {% endif %}
 
