feat: show footer.html onto the base.html

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,7 @@
       <section>
         {{ content }}
       </section>
+      {%- include footer.html -%}
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     {% if site.google_analytics %}
