--- a/assets/css/dinky-ttweb.scss
+++ b/assets/css/dinky-ttweb.scss
@@ -5,14 +5,15 @@
 // Define variables
 $letter-color: #242038;
 $ttw-red: #993333;
+$white: #ffffff;
 
 body, h1, h2, h3, h4, h5, h6 {
 	color: $letter-color;
 }
 header {
 	background-color: $ttw-red;
-	color: #ffffff;
-  width:200px;
+	color: $white;
+  width: 200px;
   float:left;
   position:fixed;
 	border: 1px solid #000;
@@ -56,18 +57,34 @@ ul.gray{
 	background-color: $letter-color;
 }
 div.categories span{// categories on post
-	color: #ffffff;
+	color: $white;
 	display: inline-block;
 	border-radius: 5px;
 	background-color: $ttw-red;
 	padding-right: 5px;
 	padding-left: 5px;
 	a, &:hover{
-		color: #ffffff;
+		color: $white;
 	}
 }
 div.menubar{
-	height: 200px;
+	height: 100px;
 	width: 650px;
   float: right;
+}
+//----------------------- Style for Home -----------------------//
+ul.post-list{// list of posts
+	list-style-type: none;
+	li{
+		height: 60px;
+	}
+}
+div.post-item{
+	div.post-title a{
+		font-size: 12pt;
+	}
+	div.post-eyecatch{
+		width: 20%;
+		float: right;
+	}
 }
