refactor: corrected the path

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <section>
   <div class="banner">
-    <img src="/assets/images/2014/05/e6b1a28e49dc802200217bf2115122601.png">
+    <img src="{{site.url}}{{site.baseurl}}/assets/images/2014/05/e6b1a28e49dc802200217bf2115122601.png">
   </div>
 </section>
