--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 {% seo %}
-  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/dinky-ttweb.css' }}">
-  <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+  <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}{{ '/assets/css/style.css?v=' | append: site.github.build_revision }}">
+  <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}{{ '/assets/css/dinky-ttweb.css' }}">
+  <script src="{{site.url}}{{site.baseurl}}{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="shortcut icon" href="/assets/images/2014/05/favicon.ico">
+  <link rel="shortcut icon" href="{{site.url}}{{site.baseurl}}/assets/images/2014/05/favicon.ico">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
