--- a/_includes/list.html
+++ b/_includes/list.html
@@ -4,6 +4,6 @@
 <h2>{{ site.names_category[category] }}</h2>
 <ul>
   {%- for post in cat-posts -%}
-  <li><a href="{{post.url}}">{{post.title}}</a></li>
+  <li><a href="{{site.url}}{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
   {%- endfor -%}
 </ul>
