--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -2,7 +2,7 @@
   {% for page in site.pages %}
     {% assign filenames = page.name | split: "cat-" %}
     {% if page.layout == 'page' and filenames.size==1 %}
-    <li><a href='{{page.permalink}}'>{{page.title}}</a></li>
+    <li><a href='{{site.url}}{{page.permalink}}'>{{page.title}}</a></li>
     {% endif %}
   {% endfor %}
 </ul>
