--- a/_includes/post_category.html
+++ b/_includes/post_category.html
@@ -1,7 +1,7 @@
 <div class="categories">
   {% for c in include.categories %}
     {% if include.show_link %}
-    <span><a href="/{{c}}/">{{ site.names_category[c] }}</a></span>
+    <span><a href="{{site.url}}{{site.baseurl}}/{{c}}/">{{ site.names_category[c] }}</a></span>
     {% else %}
     <span>{{ site.names_category[c] }}</span>
     {% endif %}
