refactor: added the js script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 {% seo %}
   <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}{{ '/assets/css/style.css?v=' | append: site.github.build_revision }}">
   <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}{{ '/assets/css/dinky-ttweb.css' }}">
-  <script src="{{site.url}}{{site.baseurl}}{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+  <script src="{{site.url}}{{site.baseurl}}{{ '/assets/js/scale.fix.js' }}"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="shortcut icon" href="{{site.url}}{{site.baseurl}}/assets/images/2014/05/favicon.ico">
   <!--[if lt IE 9]>
