debug: attempted to resolve the link
On the menu bar {{site.url}} didn't work on the production stage.

`{{site.url}} -> <a href='/'></a>`

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-  <a href="{{site.url}}"><h1 class="header">{{ site.title | default: site.github.repository_name }}</h1></a>
+  <a href="/"><h1 class="header">{{ site.title | default: site.github.repository_name }}</h1></a>
   <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 </header>
