refactor: corrected the colors of badges

--- a/_includes/post_category.html
+++ b/_includes/post_category.html
@@ -1,9 +1,9 @@
 <div class="categories">
   {% for c in include.categories %}
     {% if include.show_link %}
-    <span><a href="{{site.url}}{{site.baseurl}}/{{c}}/">{{ site.names_category[c] }}</a></span>
+    <span class='{{c}}'><a href="{{site.url}}{{site.baseurl}}/{{c}}/">{{ site.names_category[c] }}</a></span>
     {% else %}
-    <span>{{ site.names_category[c] }}</span>
+    <span class='{{c}}'>{{ site.names_category[c] }}</span>
     {% endif %}
   {% endfor %}
 </div>
