--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -6,3 +6,21 @@
     {% endif %}
   {% endfor %}
 </ul>
+
+<!-- thanks to https://copypet.jp/671/ -->
+<div id="cp_mb">
+  <input type="checkbox" id="cp_navimenuid">
+  <label class="menu" for="cp_navimenuid">
+    <div class="menubar">
+    	<span class="bar"></span>
+    	<span class="bar"></span>
+    	<span class="bar"></span>
+    </div>
+
+    <ul>
+    	<li><a id="home" href="#home">Home</a></li>
+    	<li><a id="about" href="#about">About</a></li>
+    	<li><a id="contact" href="#contact">Contact</a></li>
+    </ul>
+  </label>
+</div>
