--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -18,9 +18,14 @@
     </div>
 
     <ul>
-    	<li><a id="home" href="#home">Home</a></li>
-    	<li><a id="about" href="#about">About</a></li>
-    	<li><a id="contact" href="#contact">Contact</a></li>
+    	<li><a id="home" href="{{site.url}}{{site.baseurl}}">Home</a></li>
+      {%- for page in site.pages -%}
+        {%- assign filenames = page.name | split: "cat-" -%}
+        {%- if page.layout == 'page' and filenames.size==1 -%}
+        {%- assign abbrev = page.name | split: ".md" -%}
+        <li><a id="{{abbrev[0]}}" href="{{site.url}}{{site.baseurl}}{{page.permalink}}">{{page.title}}</a></li>
+        {%- endif -%}
+      {%- endfor -%}
     </ul>
   </label>
 </div>
