refactor: adjusted the menu button design

--- a/assets/css/dinky-ttweb.scss
+++ b/assets/css/dinky-ttweb.scss
@@ -165,7 +165,7 @@ div.menubar{
 	}
 	.menu div.menubar {
 		width: 30px;
-		margin: 13px 11px;
+		margin: 15px auto;
 	}
 	.menu div.menubar .bar {
 		display: block;
