feat: renamed the class not to confuse them in the future development

--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -11,7 +11,7 @@
 <div id="cp_mb">
   <input type="checkbox" id="cp_navimenuid">
   <label class="menu" for="cp_navimenuid">
-    <div class="menubar">
+    <div class="menuicon">
     	<span class="bar"></span>
     	<span class="bar"></span>
     	<span class="bar"></span>
