--- a/_includes/list.html
+++ b/_includes/list.html
@@ -2,8 +2,10 @@
 
 {% assign cat-posts = site.posts | where: "categories", category %}
 <h2>{{ site.names_category[category] }}</h2>
-<ul>
+<ul class="post-list">
   {%- for post in cat-posts -%}
-  <li><a href="{{site.url}}{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
+  <li>
+    {%- include post_display_card.html post=post show_category=false -%}
+  </li>
   {%- endfor -%}
 </ul>
