replace home icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-  <a href="/"><h1 class="header">{{ site.title | default: site.github.repository_name }}</h1></a>
+  <a href="/"><img src="{{site.url}}{{site.baseurl}}/assets/images/icons/ttime_logo_white.svg" width="90%" style="border:0;"></a>
   <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 </header>
