--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}{{ '/assets/css/dinky-ttweb.css' }}">
   <script src="{{site.url}}{{site.baseurl}}{{ '/assets/js/scale.fix.js' }}"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="shortcut icon" href="{{site.url}}{{site.baseurl}}/assets/images/2014/05/favicon.ico">
+  <link rel="shortcut icon" href="{{site.url}}{{site.baseurl}}/assets/images/icons/ttime_icon.svg">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
