fix footer image size

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <section>
   <div class="banner">
-    <img src="{{site.url}}{{site.baseurl}}/assets/images/2014/05/e6b1a28e49dc802200217bf2115122601.png">
+    <center>
+      <img src="{{site.url}}{{site.baseurl}}/assets/images/icons/footer.png" width="70%">
+    </center>
   </div>
 </section>
