--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -1,5 +1,6 @@
 <ul class="horizontal gray">
   {%- assign pages = (site.pages | sort: 'order') -%}
+  <li><a href='{{site.url}}{{site.baseurl}}/posts'>Posts</a></li>
   {% for page in pages %}
     {% assign filenames = page.name | split: "cat-" %}
     {% if page.layout == 'page' and filenames.size==1 %}
@@ -20,6 +21,7 @@
 
     <ul>
       <li><a id="home" href="{{site.url}}{{site.baseurl}}/">Home</a></li>
+        <li><a id="posts" href="{{site.url}}{{site.baseurl}}/posts">Posts</a></li>
       {%- assign pages = (site.pages | sort: 'order') -%}
       {%- for page in pages -%}
         {%- assign filenames = page.name | split: "cat-" -%}
