--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -1,12 +1,10 @@
 <ul class="horizontal gray">
   {%- assign pages = (site.pages | sort: 'order') -%}
   <li><a href='{{site.url}}{{site.baseurl}}/posts'>Posts</a></li>
-  {% for page in pages %}
-    {% assign filenames = page.name | split: "cat-" %}
-    {% if page.layout == 'page' and filenames.size==1 %}
-    <li><a href='{{site.url}}{{site.baseurl}}{{page.permalink}}'>{{page.title}}</a></li>
-    {% endif %}
-  {% endfor %}
+  <li><a id="archives" href="{{site.url}}{{site.baseurl}}/posts">Archives</a></li>
+  <li><a id="about" href="{{site.url}}{{site.baseurl}}/posts">About Us</a></li>
+  <li><a id="link" href="{{site.url}}{{site.baseurl}}/posts">Links</a></li>
+  <li><a id="contact" href="{{site.url}}{{site.baseurl}}/posts">Contact Us</a></li>
 </ul>
 
 <!-- thanks to https://copypet.jp/671/ -->
@@ -14,22 +12,19 @@
   <input type="checkbox" id="cp_navimenuid">
   <label class="menu" for="cp_navimenuid">
     <div class="menuicon">
-    	<span class="bar"></span>
-    	<span class="bar"></span>
-    	<span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
 
     <ul>
       <li><a id="home" href="{{site.url}}{{site.baseurl}}/">Home</a></li>
-        <li><a id="posts" href="{{site.url}}{{site.baseurl}}/posts">Posts</a></li>
-      {%- assign pages = (site.pages | sort: 'order') -%}
-      {%- for page in pages -%}
-        {%- assign filenames = page.name | split: "cat-" -%}
-        {%- if page.layout == 'page' and filenames.size==1 -%}
-        {%- assign abbrev = page.name | split: ".md" -%}
-        <li><a id="{{abbrev[0]}}" href="{{site.url}}{{site.baseurl}}{{page.permalink}}">{{page.title}}</a></li>
-        {%- endif -%}
-      {%- endfor -%}
+      <li><a id="posts" href="{{site.url}}{{site.baseurl}}/posts">Posts</a></li>
+      <li><a id="archives" href="{{site.url}}{{site.baseurl}}/posts">Archives</a></li>
+      <li><a id="about" href="{{site.url}}{{site.baseurl}}/posts">About Us</a></li>
+      <li><a id="link" href="{{site.url}}{{site.baseurl}}/posts">Links</a></li>
+      <li><a id="contact" href="{{site.url}}{{site.baseurl}}/posts">Contact Us</a></li>
+
     </ul>
   </label>
 </div>
