--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -1,10 +1,10 @@
 <ul class="horizontal gray">
   {%- assign pages = (site.pages | sort: 'order') -%}
   <li><a href='{{site.url}}{{site.baseurl}}/posts'>Posts</a></li>
-  <li><a id="archives" href="{{site.url}}{{site.baseurl}}/posts">Archives</a></li>
-  <li><a id="about" href="{{site.url}}{{site.baseurl}}/posts">About Us</a></li>
-  <li><a id="link" href="{{site.url}}{{site.baseurl}}/posts">Links</a></li>
-  <li><a id="contact" href="{{site.url}}{{site.baseurl}}/posts">Contact Us</a></li>
+  <li><a id="archives" href="{{site.url}}{{site.baseurl}}/archives">Archives</a></li>
+  <li><a id="about" href="{{site.url}}{{site.baseurl}}/about">About Us</a></li>
+  <li><a id="link" href="{{site.url}}{{site.baseurl}}/links">Links</a></li>
+  <li><a id="contact" href="{{site.url}}{{site.baseurl}}/contact">Contact Us</a></li>
 </ul>
 
 <!-- thanks to https://copypet.jp/671/ -->
