add basic info of opencampus

--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -1,6 +1,6 @@
 <ul class="horizontal gray">
   {%- assign pages = (site.pages | sort: 'order') -%}
-  <li><a href='{{site.url}}{{site.baseurl}}/posts'>Posts</a></li>
+  <li><a id="posts" href='{{site.url}}{{site.baseurl}}/posts'>Posts</a></li>
   <li><a id="archives" href="{{site.url}}{{site.baseurl}}/archives">Archives</a></li>
   <li><a id="about" href="{{site.url}}{{site.baseurl}}/about">About Us</a></li>
   <li><a id="link" href="{{site.url}}{{site.baseurl}}/links">Links</a></li>
