--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,12 @@ layout: base
     <h1 class="page-heading">{{page.title}}</h1>
   {%- endif -%}
 
+  <h2>オープンキャンパス企画！</h2>
+  <p>
+    7/10，7/11にオンライン学生談話室を開催します！
+    詳しくは<a href="{{site.url}}{{site.baseurl}}/opencampus">こちら</a>から！
+  </p>
+
   {%- if site.posts.size > 0 -%}
     <h2>新着</h2>
     <ul class="post-list">
