--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,9 +7,9 @@ layout: base
   {%- endif -%}
 
   <h2>新歓情報 🎉🎉🎉</h2>
-  <!-- <p>Ttime!では今年も一緒に活動していく仲間を募集しています！詳しくは<a href="{{site.url}}{{site.baseurl}}/recruiting">こちら</a>から！</p> -->
+  <p>Ttime!では今年も一緒に活動していく仲間を募集しています！詳しくは<a href="{{site.url}}{{site.baseurl}}/recruiting">こちら</a>から！</p>
 
-  <p>Ttime!では今年も一緒に活動していく仲間を募集しています！詳しくは<a href="../pages/recruiting.md">こちら</a>から！</p>
+  <!-- <p>Ttime!では今年も一緒に活動していく仲間を募集しています！詳しくは<a href="../pages/recruiting.md">こちら</a>から！</p> -->
 
   {%- if site.posts.size > 0 -%}
     <h2>新着</h2>
