menubar.html:checkboxメニューのリンクを修正しました。20231022

--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -20,10 +20,10 @@
     <ul>
       <li><a id="home" href="{{site.url}}{{site.baseurl}}/">Home</a></li>
       <li><a id="posts" href="{{site.url}}{{site.baseurl}}/posts">Posts</a></li>
-      <li><a id="archives" href="{{site.url}}{{site.baseurl}}/posts">Archives</a></li>
-      <li><a id="about" href="{{site.url}}{{site.baseurl}}/posts">About Us</a></li>
-      <li><a id="link" href="{{site.url}}{{site.baseurl}}/posts">Links</a></li>
-      <li><a id="contact" href="{{site.url}}{{site.baseurl}}/posts">Contact Us</a></li>
+      <li><a id="archives" href="{{site.url}}{{site.baseurl}}/archives">Archives</a></li>
+      <li><a id="about" href="{{site.url}}{{site.baseurl}}/about">About Us</a></li>
+      <li><a id="link" href="{{site.url}}{{site.baseurl}}/links">Links</a></li>
+      <li><a id="contact" href="{{site.url}}{{site.baseurl}}/contact">Contact Us</a></li>
 
     </ul>
   </label>
